--- a/Linear Algebra Done Taiwan/preamble.tex
+++ b/Linear Algebra Done Taiwan/preamble.tex
@@ -110,6 +110,7 @@
 
 % tcolorbox Setup
 \usepackage[most,many,breakable]{tcolorbox}
+\tcbuselibrary{theorems}
 
 % Define custom tcolorbox environments here...
 
@@ -188,34 +189,8 @@
 			(frame.north) -| cycle;
 		},
 	#1
-}{def}
+}{question}
 \makeatother
-\makeatletter
-\newtcbtheorem{qstion}{Question}{enhanced,
-    breakable,
-    colback=white,
-    colframe=mygr,
-    attach boxed title to top left={yshift*=-\tcboxedtitleheight},
-    fonttitle=\bfseries,
-    title={#2},
-    boxed title size=title,
-    boxed title style={%
-        sharp corners,
-        rounded corners=northwest,
-        colback=tcbcolframe,
-        boxrule=0pt,
-    },
-    underlay boxed title={%
-        \path[fill=tcbcolframe] (title.south west)--(title.south east)
-        to[out=0, in=180] ([xshift=5mm]title.east)--
-        (title.center-|frame.east)
-        [rounded corners=\kvtcb@arc] |-
-        (frame.north) -| cycle;
-    },
-    #1
-}{def}
-\makeatother
-
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TABLE OF CONTENTS
