--- a/Algebraic Geometry/macros.tex
+++ b/Algebraic Geometry/macros.tex
@@ -102,5 +102,8 @@
 \end{tikzpicture}
 }
 
+
+%%%Commutative Diagram%%%
 \usepackage{tikz}
 \newcommand*{\DashedArrow}[1][]{\mathbin{\tikz [baseline=-0.25ex,-latex, dashed,#1] \draw [#1] (0pt,0.5ex) -- (1.3em,0.5ex);}}
+
